# -filmreviews

./: Pipfile  README.md  README.md.backup  excutePython.sh  installUpdate.sh  pyproject.toml  readme.me  requirements.txt
filmreviews/: analyzer.py  benchmark.py  demofile3.txt  file2.txt  imdb.py  imdbClass.py  index.py  index_gen.py  informations.txt  main.py  main_bench  merg_search.py  merge_search.py  movie_search.py  ny_times.py  query_benchmark  setup_benchmark.py  source.py  test.txt  tomatoes.py
filmreviews/benchmark/: query.txt  query_out.txt
filmreviews/imdb/: demofile2.txt  demofile3.txt  imdbClass.py  movie_search.py
filmreviews/index/: final_index.json  index.json  index.py  intermediate_index.txt  resume.txt  reviews.txt
filmreviews/indexdir/: MAIN_39r02exljle5zdl3._stored.col  MAIN_3ownc7xs3xrffeqa._stored.col  MAIN_6j21kvoey5f3u3l1._content_len.col  MAIN_6j21kvoey5f3u3l1._stored.col  MAIN_6j21kvoey5f3u3l1._title_len.col  MAIN_83elnfxdhtz94k19._content_len.col  MAIN_83elnfxdhtz94k19._stored.col  MAIN_83elnfxdhtz94k19._title_len.col  MAIN_9yueedplirteklag.seg  MAIN_a3kpacjgzdw64gzo._title_len.col  MAIN_aut3sk48ugthloh2._content_len.col  MAIN_aut3sk48ugthloh2._stored.col  MAIN_aut3sk48ugthloh2._title_len.col  MAIN_be19cteturbjhbvn._content_len.col  MAIN_be19cteturbjhbvn._stored.col  MAIN_g6ifx7rnqqjezres.seg  MAIN_gaoyf23ic1c9l36q._content_len.col  MAIN_gaoyf23ic1c9l36q._stored.col  MAIN_gaoyf23ic1c9l36q._title_len.col  MAIN_gl5m0apn48us0bhx.seg  MAIN_ipyy1rblnipc1k28._content_len.col  MAIN_ipyy1rblnipc1k28._stored.col  (+27 more)
tests/: test_filmreviews.py
(+3 files in other folders)
