[tool.poetry]
name = "filmreviews"
version = "0.1.0"
description = ""
authors = ["chx56 <russoantonio451@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Whoosh = "^2.7.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
